user connection with mongodb
added user connection and registration using mongodb and mongoose.
added support for passport authorization using a .env file

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 body {
   margin: 0px;
+  --blue: #0d6efd;
 }
 
 header {
@@ -20,18 +21,56 @@ footer {
 
 .navbar-item {
   text-decoration: none;
+  color:white;
+  border-radius: 3px;
+  padding:8px;
+  border-radius: 16px;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .navbar {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   display: flex;
-  gap: 10px;
+  justify-content: center;
+  gap: 15px;
+  background-color: var(--blue);
+  border-radius: 15px;
 }
 
-.navbar li {
-  background-color: #00000040;
-  border-radius: 3px;
-  padding: 4px;
+.nav-custom {
+  --bs-nav-link-color: var(--bs-white);
+  --bs-nav-pills-link-active-color: var(--bs-primary);
+  --bs-nav-pills-link-active-bg: var(--bs-white);
+}
+
+.active{
+  background-color: white;
+  color:var(--blue);
+}
+
+.navbar-item:hover{
+  background-color: white;
+  color:var(--blue);
+}
+
+.center{
+  text-align: center;
+}
+
+.btn-style-rm{
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+  text-decoration:underline;
+
+}
+
+.btn-style-rm:hover{
+  color: var(--blue)
 }
