--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -10,20 +10,20 @@
     <h1>showing all routes for the api</h1>
     <h2>General</h2>
     <ul>
-      <li>GET: http://localhost/</li>
+      <li>GET: /</li>
     </ul>
     <h2>Users</h2>
     <ul>
-      <li>GET: http://localhost:8000/users/all</li>
-      <li>DELETE: http://localhost:8000/users/all</li>
-      <li>POST: http://localhost:8000/users/register</li>
-      <li>GET: http://localhost:8000/users/:id</li>
-      <li>GET: http://localhost:8000/users/:id/:symbol</li>
+      <li>GET: /users/all</li>
+      <li>DELETE: /users/all</li>
+      <li>POST: /users/register</li>
+      <li>GET: /users/:id</li>
+      <li>GET: /users/:id/:symbol</li>
     </ul>
     <h2>Stocks</h2>
     <ul>
-      <li>GET: http://localhost:8000/stocks/all</li>
-      <li>GET: http://localhost:8000/stocks/:symbol</li>
+      <li>GET: /stocks/all</li>
+      <li>GET: /stocks/:symbol</li>
     </ul>
   </body>
 </html>
