--- a/client-angular/src/app/header/header.component.html
+++ b/client-angular/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<a routerLink="">Home</a>
+<a routerLink="/stocks">My Stocks</a>
+<a routerLink="/user">User Information</a>
+<a routerLink="/user/login">Login</a>
+<a routerLink="/user/register">Sign Up</a>
