--- a/client-angular/src/app/home/home.component.html
+++ b/client-angular/src/app/home/home.component.html
@@ -1,3 +1,6 @@
 <h1>Welcome to your stocks viewer</h1>
-
-<app-stocks-viewer></app-stocks-viewer>
+<p>
+    in this simple app you will be able to
+    better manage your stocks and leave notes to remember for your future deals.
+    please join us to enjoy our services.
+</p>
