--- a/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
+++ b/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
@@ -1,26 +1,43 @@
 <div *ngIf="IsConnected">
-  <table>
-    <thead>
-      <tr>
-        <th>header1</th>
-        <th>header2</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>first data</td>
-        <td>second data</td>
-      </tr>
-      <tr>
-        <td>first data</td>
-        <td>second data</td>
-      </tr>
-    </tbody>
-  </table>
+  <div>
+    <p>Your Stocks</p>
+    <table>
+      <thead>
+        <tr>
+          <th>Stock Symbol</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let stk of Stocks.stocksSymbol">
+          <td>{{ stk }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div>
+    <p>Watching Stocks</p>
+    <table>
+      <thead>
+        <tr>
+          <th>Stock Symbol</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let stk of Stocks.watchingStocksSymbol">
+            <td>{{ stk }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 <div *ngIf="!IsConnected">
-    <p>you are welcome to connect to your account, 
-        if you dont have an account yet be sure to create one!</p>
-    <a routerLink="/users/connect">connect</a>
-    <a routerLink="/users/register">register</a>
+  <p>
+    you are welcome to connect to your account, if you dont have an account yet
+    be sure to create one!
+  </p>
+  <a routerLink="/users/connect">connect</a>
+  <a routerLink="/users/register">register</a>
 </div>
