--- a/client-angular/src/app/home/user-login/user-login.component.html
+++ b/client-angular/src/app/home/user-login/user-login.component.html
@@ -1,1 +1,10 @@
-<p>user-login works!</p>
+<p>welcome to login page</p>
+<form>
+    <label>Email</label>
+    <input type="email"/>
+    <br>
+    <label>Password</label>
+    <input type="password"/>
+    <br>
+    <button type="submit">Login</button>
+</form>
