--- a/client-angular/src/app/home/user-register/user-register.component.html
+++ b/client-angular/src/app/home/user-register/user-register.component.html
@@ -1,1 +1,16 @@
-<p>user-register works!</p>
+<p>welcome to register page</p>
+<form>
+    <label>Email</label>
+    <input type="email"/>
+    <br>
+    <label>Repeat email</label>
+    <input type="email"/>
+    <br>
+    <label>Password</label>
+    <input type="password"/>
+    <br>
+    <label>Repeat password</label>
+    <input type="password"/>
+    <br>
+    <button type="submit">Register</button>
+</form>
