--- a/client-angular/src/app/home/user-login/user-login.component.html
+++ b/client-angular/src/app/home/user-login/user-login.component.html
@@ -1,10 +1,15 @@
-<p>welcome to login page</p>
-<form>
-    <label>Email</label>
-    <input type="email"/>
-    <br>
-    <label>Password</label>
-    <input type="password"/>
-    <br>
-    <button type="submit">Login</button>
-</form>
+<div class="login-container">
+    <h2>Login</h2>
+    <form>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Enter your email" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="Enter your password" required>
+        </div>
+        <button type="submit" class="btn-primary">Login</button>
+    </form>
+    <p>Don't have an account? <a routerLink="/register">Sign up</a></p>
+</div>
