--- a/client-angular/src/app/home/user-register/user-register.component.html
+++ b/client-angular/src/app/home/user-register/user-register.component.html
@@ -1,16 +1,23 @@
-<p>welcome to register page</p>
-<form>
-    <label>Email</label>
-    <input type="email"/>
-    <br>
-    <label>Repeat email</label>
-    <input type="email"/>
-    <br>
-    <label>Password</label>
-    <input type="password"/>
-    <br>
-    <label>Repeat password</label>
-    <input type="password"/>
-    <br>
-    <button type="submit">Register</button>
-</form>
+<div class="signup-container">
+    <h2>Sign Up</h2>
+    <form>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="Enter your name" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Enter your email" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="Enter your password" required>
+        </div>
+        <div class="form-group">
+            <label for="confirm-password">Confirm Password</label>
+            <input type="password" id="confirm-password" placeholder="Confirm your password" required>
+        </div>
+        <button type="submit" class="btn-primary">Sign Up</button>
+    </form>
+    <p>Already have an account? <a routerLink="/login">Login</a></p>
+</div>
