--- a/client-angular/src/app/home/stocks-search/stocks-search.component.css
+++ b/client-angular/src/app/home/stocks-search/stocks-search.component.css
@@ -40,21 +40,24 @@
     gap: 2rem;
 }
 
-.stock-card {
+table {
+    width: 100%;
+    max-width: 800px;
+    border-collapse: collapse;
     background-color: #ffffff;
-    border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+th, td {
     padding: 1rem;
     text-align: center;
 }
 
-.stock-card h3 {
-    font-size: 1.2rem;
-    margin-bottom: 0.5rem;
-    color: #0077b6;
+th {
+    background-color: #0077b6;
+    color: #ffffff;
 }
 
-.stock-card p {
-    font-size: 1rem;
-    margin-bottom: 0.5rem;
+tr:nth-child(even) {
+    background-color: #f2f2f2;
 }
