adding router links
in the header the logo would link to the home page, from home would link to register page

--- a/client-angular/src/app/header/header.component.html
+++ b/client-angular/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <div class="logo">Stock Collection</div>
+        <div class="logo" routerLink="/">Stock Collection</div>
         <div class="nav-links">
             <a routerLink="">Home</a>
             <a routerLink="/stocks/search">Search</a>
