--- a/client-angular/src/app/home/home.component.html
+++ b/client-angular/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="hero">
     <h1>Invest with Confidence</h1>
     <p>Track your stocks, analyze trends, and make informed decisions with our powerful stock collection app.</p>
-    <button>Get Started</button>
+    <button routerLink="/register">Get Started</button>
 </div>
