--- a/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
+++ b/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
@@ -1,52 +1,56 @@
-<div *ngIf="IsConnected">
-  <div class="stock-list-container">
-    <h2>My Stocks</h2>
-    <table id="stockTable">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Symbol</th>
-          <th>Price</th>
-          <th>Prediction (1 year)</th>
-        </tr>
-      </thead>
-      <tbody id="stockList">
-        <tr class="stock-card" *ngFor="let stock of UserStocks">
-          <td>{{stock.name}}</td>
-          <td>Symbol: {{stock.symbol}}</td>
-          <td>Price: {{stock.price.toFixed(2)}}</td>
-          <td>Prediction (1 year): {{stock.prediction}}</td>
-        </tr>
-      </tbody>
-    </table>
+<<ng-container *ngIf="IsConnected">
+  <div>
+    <div class="stock-list-container">
+      <h2>My Stocks</h2>
+      <table id="stockTable">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Symbol</th>
+            <th>Price</th>
+            <th>Prediction (1 year)</th>
+          </tr>
+        </thead>
+        <tbody id="stockList">
+          <tr class="stock-card" *ngFor="let stock of UserStocks">
+            <td>{{stock.name}}</td>
+            <td>Symbol: {{stock.symbol}}</td>
+            <td>Price: {{stock.price.toFixed(2)}}</td>
+            <td>Prediction (1 year): {{stock.prediction}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="stock-list-container">
+      <h2>Watching</h2>
+      <table id="stockTable">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Symbol</th>
+            <th>Price</th>
+            <th>Prediction (1 year)</th>
+          </tr>
+        </thead>
+        <tbody id="stockList">
+          <tr class="stock-card" *ngFor="let stock of Stocks.watchingStocksSymbol">
+            <td>{{stock}}</td>
+            <td>Symbol: {{stock.symbol}}</td>
+            <td>Price: {{stock.price}}</td>
+            <td>Prediction (1 year): {{stock.prediction}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
-  <div class="stock-list-container">
-    <h2>Watching</h2>
-    <table id="stockTable">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Symbol</th>
-          <th>Price</th>
-          <th>Prediction (1 year)</th>
-        </tr>
-      </thead>
-      <tbody id="stockList">
-        <tr class="stock-card" *ngFor="let stock of Stocks.watchingStocksSymbol">
-          <td>{{stock}}</td>
-          <td>Symbol: {{stock.symbol}}</td>
-          <td>Price: {{stock.price.toFixed(2)}}</td>
-          <td>Prediction (1 year): {{stock.prediction}}</td>
-        </tr>
-      </tbody>
-    </table>
+</ng-container>
+<ng-container *ngIf="!IsConnected">
+  <div>
+    <p>
+      you are welcome to connect to your account, if you dont have an account yet
+      be sure to create one!
+    </p>
+    <a routerLink="/connect">connect</a>
+    <a routerLink="/register">register</a>
   </div>
-</div>
-<div *ngIf="!IsConnected">
-  <p>
-    you are welcome to connect to your account, if you dont have an account yet
-    be sure to create one!
-  </p>
-  <a routerLink="/connect">connect</a>
-  <a routerLink="/register">register</a>
-</div>
+</ng-container>
