--- a/client-angular/src/app/home/user-register/user-register.component.html
+++ b/client-angular/src/app/home/user-register/user-register.component.html
@@ -3,21 +3,21 @@
     <form>
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Enter your name" required>
+            <input type="text" id="name" placeholder="Enter your name" required #name>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Enter your email" required>
+            <input type="email" id="email" placeholder="Enter your email" required #email>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" placeholder="Enter your password" required>
+            <input type="password" id="password" placeholder="Enter your password" required #password>
         </div>
         <div class="form-group">
             <label for="confirm-password">Confirm Password</label>
             <input type="password" id="confirm-password" placeholder="Confirm your password" required>
         </div>
-        <button type="submit" class="btn-primary">Sign Up</button>
+        <button type="submit" class="btn-primary" (click)="CreateUser($event ,name.value, email.value, password.value)">Sign Up</button>
     </form>
     <p>Already have an account? <a routerLink="/login">Login</a></p>
 </div>
