--- a/client-angular/src/app/header/header.component.html
+++ b/client-angular/src/app/header/header.component.html
@@ -7,6 +7,7 @@
             <ng-container *ngIf="isConnected; else elseTemplate">
                 <a routerLink="/user/stocks">My Stocks</a>
                 <a routerLink="/user/information">User Information</a>
+                <a routerLink="/" (click)="SignOut()">Sign Out</a>
                 <!-- TODO -->
                 <!-- <a routerLink="/register">Insights</a> -->
             </ng-container>
