--- a/client-angular/src/app/header/header.component.html
+++ b/client-angular/src/app/header/header.component.html
@@ -4,7 +4,7 @@
         <div class="nav-links">
             <a routerLink="">Home</a>
             <a routerLink="/stocks/search">Search</a>
-            <ng-container *ngIf="isConnected; else elseTemplate">
+            <ng-container *ngIf="IsConnected(); else elseTemplate">
                 <a routerLink="/user/stocks">My Stocks</a>
                 <a routerLink="/user/information">User Information</a>
                 <a routerLink="/" (click)="SignOut()">Sign Out</a>
