--- a/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
+++ b/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
@@ -1,4 +1,14 @@
-<<ng-container *ngIf="IsConnected">
+<ng-container *ngIf="!UserEmail; else elseTemplate">
+  <div>
+    <p>
+      you are welcome to connect to your account, if you dont have an account yet
+      be sure to create one!
+    </p>
+    <a routerLink="/connect">connect</a>
+    <a routerLink="/register">register</a>
+  </div>
+</ng-container>
+<ng-template #elseTemplate>
   <div>
     <div class="stock-list-container">
       <h2>My Stocks</h2>
@@ -12,7 +22,7 @@
           </tr>
         </thead>
         <tbody id="stockList">
-          <tr class="stock-card" *ngFor="let stock of UserStocks">
+          <tr class="stock-card" *ngFor="let stock of Stocks.stocks">
             <td>{{stock.name}}</td>
             <td>Symbol: {{stock.symbol}}</td>
             <td>Price: {{stock.price.toFixed(2)}}</td>
@@ -43,14 +53,4 @@
       </table>
     </div>
   </div>
-</ng-container>
-<ng-container *ngIf="!IsConnected">
-  <div>
-    <p>
-      you are welcome to connect to your account, if you dont have an account yet
-      be sure to create one!
-    </p>
-    <a routerLink="/connect">connect</a>
-    <a routerLink="/register">register</a>
-  </div>
-</ng-container>
+</ng-template>
