--- a/client-angular/src/app/home/user-information/user-information.component.html
+++ b/client-angular/src/app/home/user-information/user-information.component.html
@@ -1,6 +1,6 @@
 <div class="profile-container">
     <h2>User Profile</h2>
-    <h2>Welcome {{ GetUser().name }}</h2>
+    <h2>Welcome {{ GetUser() }}</h2>
     <br>
     <div class="profile-info">
         <div class="info-box">
