--- a/client-angular/src/app/home/user-login/user-login.component.html
+++ b/client-angular/src/app/home/user-login/user-login.component.html
@@ -3,13 +3,13 @@
     <form>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Enter your email" required>
+            <input type="email" id="email" placeholder="Enter your email" required #email>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" placeholder="Enter your password" required>
+            <input type="password" id="password" placeholder="Enter your password" required #password>
         </div>
-        <button type="submit" class="btn-primary">Login</button>
+        <button type="submit" class="btn-primary" (click)="SignIn($event, email.value, password.value)">Login</button>
     </form>
     <p>Don't have an account? <a routerLink="/register">Sign up</a></p>
 </div>
