--- a/client-angular/src/app/home/user-information/user-information.component.html
+++ b/client-angular/src/app/home/user-information/user-information.component.html
@@ -3,16 +3,17 @@
     <h2>Welcome {{ GetUser() }}</h2>
     <br>
     <div class="profile-info">
-        <div class="info-box">
-            <h3>General Information</h3>
-            <p><strong>Name:</strong> John Doe</p>
-            <p><strong>Email:</strong> john.doe@example.com</p>
-        </div>
-        <div class="info-box">
-            <h3>Stock Portfolio</h3>
-            <p><strong>Total Gains:</strong> $25,000</p>
-            <p><strong>Number of Stocks:</strong> 10</p>
-        </div>
+        
+    </div>
+    <div class="chart-container">
+        <h3>General Information</h3>
+        <p><strong>Name:</strong> John Doe</p>
+        <p><strong>Email:</strong> john.doe@example.com</p>
+    </div>
+    <div class="chart-container">
+        <h3>Stock Portfolio</h3>
+        <p><strong>Total Gains:</strong> $25,000</p>
+        <p><strong>Number of Stocks:</strong> 10</p>
     </div>
     <div class="chart-container">
         <h3>Stock Distribution</h3>
