--- a/client-angular/src/app/home/user-information/user-information.component.css
+++ b/client-angular/src/app/home/user-information/user-information.component.css
@@ -14,14 +14,6 @@
     margin-bottom: 2rem;
 }
 
-.info-box {
-    background-color: #ffffff;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 1rem;
-    text-align: center;
-}
-
 .chart-container {
     width: 100%;
     max-width: 600px;
@@ -29,4 +21,5 @@
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 1rem;
+    margin: 0.5rem 0rem;
 }
