stock search component
adding a button to navigate to the stock information

--- a/client-angular/src/app/home/stocks-search/stocks-search.component.html
+++ b/client-angular/src/app/home/stocks-search/stocks-search.component.html
@@ -22,7 +22,7 @@
                         <tr class="stock-card" *ngFor="let stock of stocksList">
                             <td>{{stock.name}}</td>
                             <td>{{stock.symbol}}</td>
-                            <td><button>+</button></td>
+                            <td><button (click)="NavigateStockInformation(stock.symbol)">+</button></td>
                         </tr>
                     </tbody>
                 </table>
