--- a/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
+++ b/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
@@ -10,15 +10,19 @@
 </ng-container>
 <ng-template #elseTemplate>
   <div>
-    <app-stocks-table 
-      tableTitle="My Stocks" 
-      [stocks]="Stocks.stocks"
-      [stocksDictionary]="Stocks.stocksDictionary">
-    </app-stocks-table>
-    <app-stocks-table 
-      tableTitle="Watching" 
+    <div class="stock-list-container">
+      <h2>My Stocks</h2>
+      <app-stocks-table 
+        [stocks]="Stocks.stocks"
+        [stocksDictionary]="Stocks.stocksDictionary">
+      </app-stocks-table>
+    </div>
+    <div class="stock-list-container">
+      <h2>Watching</h2>
+      <app-stocks-table 
       [stocks]="Stocks.watchingStocksSymbol"
       [stocksDictionary]="Stocks.stocksDictionary">
     </app-stocks-table>
+    </div>
   </div>
 </ng-template>
