adding notes dynamically
creating a function to add notes, using the database service. also adding an option to remove the note by pressing the paragraph text.

--- a/client-angular/src/app/home/stocks-viewer/stocks-table/stocks-table.component.html
+++ b/client-angular/src/app/home/stocks-viewer/stocks-table/stocks-table.component.html
@@ -22,10 +22,10 @@
       <td>{{stocksDictionary[stock.symbol].oneYearEstimate}}</td>
       <td>
         <ng-container *ngIf="!stock.note; else elseTemplate">
-          <button>+</button>
+          <button (click)="CreateStockNote(stock.symbol)">+</button>
         </ng-container>
         <ng-template #elseTemplate>
-          {{stock.note}}
+          <p (click)="DeleteNote(stock.symbol)">{{stock.note}}</p>
         </ng-template>
       </td>
     </tr>
