--- a/client-angular/src/app/home/user-information/user-information.component.html
+++ b/client-angular/src/app/home/user-information/user-information.component.html
@@ -1,19 +1,15 @@
 <div class="profile-container">
     <h2>User Profile</h2>
-    <h2>Welcome {{ GetUser() }}</h2>
     <br>
-    <div class="profile-info">
-        
-    </div>
     <div class="chart-container">
         <h3>General Information</h3>
-        <p><strong>Name:</strong> John Doe</p>
-        <p><strong>Email:</strong> john.doe@example.com</p>
+        <p><strong>Name:</strong> {{user.name}}</p>
+        <p><strong>Email:</strong> {{user.email}}</p>
     </div>
     <div class="chart-container">
         <h3>Stock Portfolio</h3>
         <p><strong>Total Gains:</strong> $25,000</p>
-        <p><strong>Number of Stocks:</strong> 10</p>
+        <p><strong>Number of Stocks:</strong> {{user.stocks.length}}</p>
     </div>
     <div class="chart-container">
         <h3>Stock Distribution</h3>
