--- a/client-angular/src/app/home/user-information/user-information.component.html
+++ b/client-angular/src/app/home/user-information/user-information.component.html
@@ -9,7 +9,7 @@
     <div class="chart-container">
         <h3>Stock Portfolio</h3>
         <p><strong>Total Gains:</strong> $25,000</p>
-        <p><strong>Number of Stocks:</strong> {{user.stocks.length}}</p>
+        <p><strong>Number of Stocks:</strong></p>
     </div>
     <div class="chart-container">
         <h3>Stock Distribution</h3>
