--- a/client-angular/src/app/home/user-register/user-register.component.html
+++ b/client-angular/src/app/home/user-register/user-register.component.html
@@ -1,23 +1,23 @@
 <div class="signup-container">
     <h2>Sign Up</h2>
-    <form>
+    <form (ngSubmit)="CreateUser()" #registrationForm="ngForm">
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Enter your name" required #name>
+            <input type="text" id="name" placeholder="Enter your name" required name="name" ngModel>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Enter your email" required #email>
+            <input type="email" id="email" placeholder="Enter your email" required name="email" ngModel>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" placeholder="Enter your password" required #password>
+            <input type="password" id="password" placeholder="Enter your password" required name="password" ngModel>
         </div>
         <div class="form-group">
             <label for="confirm-password">Confirm Password</label>
-            <input type="password" id="confirm-password" placeholder="Confirm your password" required>
+            <input type="password" id="confirm-password" placeholder="Confirm your password" required name="repeatPassword" ngModel>
         </div>
-        <button type="submit" class="btn-primary" (click)="CreateUser($event ,name.value, email.value, password.value)">Sign Up</button>
+        <button type="submit" class="btn-primary">Sign Up</button>
     </form>
     <p>Already have an account? <a routerLink="/login">Login</a></p>
 </div>
