--- a/client-angular/src/app/home/user-login/user-login.component.html
+++ b/client-angular/src/app/home/user-login/user-login.component.html
@@ -1,15 +1,15 @@
 <div class="login-container">
     <h2>Login</h2>
-    <form>
+    <form (ngSubmit)="SignIn()" #connectionForm="ngForm">
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Enter your email" required #email>
+            <input type="email" id="email" placeholder="Enter your email" required name="email" ngModel>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" placeholder="Enter your password" required #password>
+            <input type="password" id="password" placeholder="Enter your password" required name="password" ngModel>
         </div>
-        <button type="submit" class="btn-primary" (click)="SignIn($event, email.value, password.value)">Login</button>
+        <button type="submit" class="btn-primary">Login</button>
     </form>
     <p>Don't have an account? <a routerLink="/register">Sign up</a></p>
 </div>
