--- a/client-angular/src/app/home/user-information/user-information.component.html
+++ b/client-angular/src/app/home/user-information/user-information.component.html
@@ -3,7 +3,7 @@
     <br>
     <div class="chart-container">
         <h3>General Information</h3>
-        <p><strong>Name:</strong> {{user?.name}}</p>
+        <p><strong>Name:</strong> {{user?.firstName}} {{user?.lastName}}</p>
         <p><strong>Email:</strong> {{user?.email}}</p>
     </div>
     <div class="chart-container">
